--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "author": "Cristhian Leal",
   "license": "MIT",
   "type": "module",
+  "engines": {
+    "node": ">=16.13"
+  },
   "dependencies": {
     "@prisma/client": "^5.4.2",
     "cors": "^2.8.5",
